--- a/nage.services/pom.xml
+++ b/nage.services/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gsmp.plongee</groupId>
   <artifactId>nage.services</artifactId>
-  <version>0.9.0</version>
+  <version>0.9.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -72,8 +72,8 @@
         </repositories>
 
       <scm>
-        <connection>scm:svn:https://www.kornog-computing.com/svn/gsmp/tags/nage.services-0.9.0</connection>
-        <url>https://www.kornog-computing.com/svn/gsmp/tags/nage.services-0.9.0</url>
+        <connection>scm:svn:https://www.kornog-computing.com/svn/gsmp/trunk/nage.services/</connection>
+        <url>https://www.kornog-computing.com/svn/gsmp/trunk/nage.services/</url>
       </scm>
  <distributionManagement>
     <site>
