--- a/trunk/nage.dao/pom.xml
+++ b/trunk/nage.dao/pom.xml
@@ -151,11 +151,16 @@
       <artifactId>cglib</artifactId>
       <version>2.2</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.9.0</version>
-    </dependency>
+    </dependency>-->
+<dependency>
+	<groupId>javassist</groupId>
+	<artifactId>javassist</artifactId>
+	<version>3.9.0.GA</version>
+</dependency>
     <dependency>
       <groupId>antlr</groupId>
       <artifactId>antlr</artifactId>
