--- a/nage.services/.settings/org.eclipse.jdt.core.prefs
+++ b/nage.services/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
-#Wed Mar 21 22:25:51 CET 2012
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
