--- a/nage.services/pom.xml
+++ b/nage.services/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
     	<groupId>fr.gsmp.plongee</groupId>
     	<artifactId>nage.dao</artifactId>
-    	<version>0.9.0</version>
+    	<version>0.9.1-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>junit</groupId>
