--- a/nage.app/.settings/org.eclipse.jdt.core.prefs
+++ b/nage.app/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
-#Mon Mar 26 22:22:30 CEST 2012
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
