--- a/trunk/nage.app/pom.xml
+++ b/trunk/nage.app/pom.xml
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>fr.gsmp.plongee</groupId>
       <artifactId>nage.services</artifactId>
-      <version>0.9.0</version>
+      <version>0.9.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
