--- a/nage.app/pom.xml
+++ b/nage.app/pom.xml
@@ -3,7 +3,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gsmp.plongee</groupId>
   <artifactId>nage.app</artifactId>
-  <version>0.9.2-SNAPSHOT</version>
 
 	<repositories>
 		<repository>
@@ -165,4 +164,12 @@
 			</plugin>
     </plugins>
   </build>
+  
+   <parent>
+  <groupId>fr.gsmp.plongee</groupId>
+  <artifactId>nage</artifactId>
+  <version>0.9.2-SNAPSHOT</version>
+ 
+  </parent>
+<
 </project>
