--- a/nage.dao/pom.xml
+++ b/nage.dao/pom.xml
@@ -3,8 +3,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gsmp.plongee</groupId>
   <artifactId>nage.dao</artifactId>
-  <version>0.9.2-SNAPSHOT</version>
-
 	<repositories>
 		<repository>
 			<id>kornog-repository</id>
@@ -292,4 +290,12 @@
       </plugin>
     </plugins>
   </build>
+  
+   <parent>
+  <groupId>fr.gsmp.plongee</groupId>
+  <artifactId>nage</artifactId>
+  <version>0.9.2-SNAPSHOT</version>
+ 
+  </parent>
+<
 </project>
