--- a/nage.app/pom.xml
+++ b/nage.app/pom.xml
@@ -4,8 +4,14 @@
   <groupId>fr.gsmp.plongee</groupId>
   <artifactId>nage.app</artifactId>
   <version>0.9.2-SNAPSHOT</version>
+  
+<properties>
+   <izpack.version>5.0.9</izpack.version>
+   <izpack.staging>${project.build.directory}/staging</izpack.staging>
+</properties>
+  
 
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>kornog-repository</id>
 			<name>kornog Maven2 Repository</name>
@@ -22,7 +28,7 @@
 			<url>http://maven.kornog-computing.com/snapshot</url>
 		</repository>
                 
-        </repositories>
+        </repositories>-->
       <scm>
         <connection>scm:svn:https://www.kornog-computing.com/svn/gsmp/trunk/nage.app/</connection>
         <url>https://www.kornog-computing.com/svn/gsmp/trunk/nage.app/</url>
