--- a/nage.app/pom.xml
+++ b/nage.app/pom.xml
@@ -60,21 +60,21 @@
       <artifactId>nage.services</artifactId>
       <version>0.9.2-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-asm</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.springframework</groupId> -->
+<!--       <artifactId>spring-core</artifactId> -->
+<!--       <version>3.1.1.RELEASE</version> -->
+<!--     </dependency> -->
+<!--     <dependency> -->
+<!--       <groupId>org.springframework</groupId> -->
+<!--       <artifactId>spring-beans</artifactId> -->
+<!--       <version>3.1.1.RELEASE</version> -->
+<!--     </dependency> -->
+<!--     <dependency> -->
+<!--       <groupId>org.springframework</groupId> -->
+<!--       <artifactId>spring-asm</artifactId> -->
+<!--       <version>3.1.1.RELEASE</version> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
@@ -85,16 +85,16 @@
       <artifactId>log4j</artifactId>
       <version>1.2.15</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-expression</artifactId>
-      <version>3.1.1.RELEASE</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.springframework</groupId> -->
+<!--       <artifactId>spring-context</artifactId> -->
+<!--       <version>3.1.1.RELEASE</version> -->
+<!--     </dependency> -->
+<!--     <dependency> -->
+<!--       <groupId>org.springframework</groupId> -->
+<!--       <artifactId>spring-expression</artifactId> -->
+<!--       <version>3.1.1.RELEASE</version> -->
+<!--     </dependency> -->
     <!-- <dependency>
     	<groupId>net.sourceforge.jdatepicker</groupId>
     	<artifactId>jdatepicker</artifactId>
@@ -131,8 +131,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
