--- a/nage.izpack/pom.xml
+++ b/nage.izpack/pom.xml
@@ -26,17 +26,12 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>fr.gsmp.plongee</groupId>
-      <artifactId>nage.services</artifactId>
-      <version>0.9.2-SNAPSHOT</version>
-    </dependency>
+
     
     <dependency>
       <groupId>fr.gsmp.plongee</groupId>
       <artifactId>nage.app</artifactId>
       <version>0.9.2-SNAPSHOT</version>
-		 <scope>runtime</scope>
      </dependency>
     
     <dependency>
@@ -81,7 +76,7 @@
       <artifactId>maven-dependency-plugin</artifactId>
       <configuration>
         <excludeTransitive>false</excludeTransitive>
-        <stripVersion>true</stripVersion>
+        <stripVersion>false</stripVersion>
         <overWriteReleases>true</overWriteReleases>
         <overWriteSnapshots>true</overWriteSnapshots>
         <overWriteIfNewer>true</overWriteIfNewer>
@@ -99,7 +94,6 @@
             <outputDirectory>${izpack.staging}/lib</outputDirectory>
             <excludeScope>system</excludeScope>
             <!-- this excludes tools.jar, e.g. -->
-            <excludeArtifactIds>mycustompanels</excludeArtifactIds>
             <excludeGroupIds>org.codehaus.izpack</excludeGroupIds>
           </configuration>
         </execution>
