add bash script

--- a/nage.app/pom.xml
+++ b/nage.app/pom.xml
@@ -143,6 +143,7 @@
 						<manifest>
 							<mainClass>fr.gsmp.plongee.nage.app.GsmpNage</mainClass>
 							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
 						</manifest>
 					</archive>
 				</configuration>
