--- a/nage.app/pom.xml
+++ b/nage.app/pom.xml
@@ -44,16 +44,22 @@
 	</distributionManagement>
 
   <dependencies>
-    <dependency>
-      <groupId>org.jdesktop</groupId>
-      <artifactId>swing-layout</artifactId>
-      <version>1.0.3</version>
-    </dependency>
+
+    
+    <!-- https://mvnrepository.com/artifact/org.swinglabs/swing-layout -->
+<dependency>
+    <groupId>org.swinglabs</groupId>
+    <artifactId>swing-layout</artifactId>
+    <version>1.0.3</version>
+</dependency>
+    
+    <!-- 
+    
     <dependency>
       <groupId>org.netbeans</groupId>
       <artifactId>awtextra</artifactId>
       <version>1.0</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>fr.gsmp.plongee</groupId>
       <artifactId>nage.services</artifactId>
